@@ -1,3 +1,10 @@
+2011-09-08	The InnoDB Team
+
+	* dict/dict0load.c, handler/ha_innodb.cc, include/data0type.h
+	include/data0type.ic:
+	Fix Bug##12885783 - BLOCK LOADING TABLE WITH LARGE COLLATION
+	NUMBER FROM 5.6 SERVER
+
 2011-09-06	The InnoDB Team
 
 	* buf/buf0buddy.c:
